--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "reprograma-n3-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Codigo PROJETO FINAL",
   "main": "index.js",
   "scripts": {
     "start": "nodemon app.js",
@@ -21,5 +21,13 @@
   },
   "devDependencies": {
     "nodemon": "^1.19.4"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/belastars/PROJETO-FINAL.git"
+  },
+  "bugs": {
+    "url": "https://github.com/belastars/PROJETO-FINAL/issues"
+  },
+  "homepage": "https://github.com/belastars/PROJETO-FINAL#readme"
 }
